🚨 test(filter): refactor tests of the filter main class